# RUST-NOTES

./: 1.basic_syntax.rs  README.md
rust-background-job/: Cargo.toml  README.md
rust-background-job/src/: main.rs
rust-calculator/src/: .main.rs.swp  main.rs
rust-csv-reader-2/: Cargo.toml
rust-csv-reader-2/src/: csv_read_file.rs  csv_read_serde.rs  main.rs
rust-csv-reader/src/: csv_read_stdin.rs  csv_write_file.rs  csv_write_stdout.rs
rust-email/: Cargo.toml
rust-email/src/: main.rs
rust-jwt/: Cargo.toml
rust-jwt/src/: auth.rs  error.rs  main.rs
rust-link-checker/: Cargo.toml
rust-link-checker/src/: main.rs
rust-macros/: Cargo.toml
rust-macros/src/: lib.rs  main.rs
rust-mouse/: Cargo.toml
rust-mouse/src/: main.rs
rust-request/: Cargo.toml
rust-request/src/: main.rs
