[package]
name = "rust-mouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies.core-graphics]
version = "0.22.1"
features = ["highsierra"]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.6.3"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = ["windef"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.77"
x11 = "2.18.2"
time = "0.2.21"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
tokio = { version="0.2", features=["time","macros"] }
mouse-rs = "0.4"
